# battery-monitor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  package.json  tsconfig.json
migrations/: 001_initial.sql  002_usb_power_context.sql
public/: index.html
public/assets/: api.js  app.js  charts.js  format.js  styles.css  views.js
scripts/: battery-monitor-system-helper.sh  cargo-docker.sh  focused-window-niri.sh  install-focused-window-service.sh  install-system-helper-service.sh
src/: app.rs  cli.rs  collect.rs  config.rs  db.rs  install.rs  main.rs  main.ts  migrate.rs  server.rs  util.rs
tests/: e2e.test.ts
